SIGA-637 Migrate SiGa to Java 17