@@ -26,7 +26,7 @@
     </modules>
 
     <properties>
-        <java.version>11</java.version>
+        <java.version>17</java.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <sonar.java.coveragePlugin>jacoco</sonar.java.coveragePlugin>
         <sonar.dynamicAnalysis>reuseReports</sonar.dynamicAnalysis>
@@ -47,7 +47,7 @@
         <digidoc4j.version>5.2.0</digidoc4j.version>
         <guava.version>32.1.2-jre</guava.version>
         <h2.version>2.2.222</h2.version>
-        <ignite.version>2.14.0</ignite.version>
+        <ignite.version>2.15.0</ignite.version>
         <javax.ws.rs-api.version>2.1.1</javax.ws.rs-api.version>
         <jaxb-runtime.version>4.0.3</jaxb-runtime.version>
         <json.version>20230618</json.version>
@@ -108,12 +108,19 @@
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>${maven-surefire-plugin.version}</version>
                 <configuration>
-                    <argLine>--add-exports=java.base/jdk.internal.misc=ALL-UNNAMED
-                        --add-exports=java.base/sun.nio.ch=ALL-UNNAMED
-                        --add-exports=java.management/com.sun.jmx.mbeanserver=ALL-UNNAMED
-                        --add-exports=jdk.internal.jvmstat/sun.jvmstat.monitor=ALL-UNNAMED
-                        --add-exports=java.base/sun.reflect.generics.reflectiveObjects=ALL-UNNAMED
-                        --illegal-access=permit
+                    <argLine>--add-opens=java.base/jdk.internal.misc=ALL-UNNAMED
+                        --add-opens=java.base/sun.nio.ch=ALL-UNNAMED
+                        --add-opens=java.management/com.sun.jmx.mbeanserver=ALL-UNNAMED
+                        --add-opens=jdk.internal.jvmstat/sun.jvmstat.monitor=ALL-UNNAMED
+                        --add-opens=java.base/sun.reflect.generics.reflectiveObjects=ALL-UNNAMED
+                        --add-opens=jdk.management/com.sun.management.internal=ALL-UNNAMED
+                        --add-opens=java.base/java.io=ALL-UNNAMED
+                        --add-opens=java.base/java.nio=ALL-UNNAMED
+                        --add-opens=java.base/java.util=ALL-UNNAMED
+                        --add-opens=java.base/java.lang=ALL-UNNAMED
+                        --add-opens=java.base/java.time=ALL-UNNAMED
+                        --add-opens=java.base/sun.security.x509=ALL-UNNAMED
+                        --add-opens=java.base/java.security.cert=ALL-UNNAMED
                         ${argLine}
                     </argLine>
                 </configuration>
